# venice-e2ee-proxy

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
config/: default.toml
src/: attestation.rs  config.rs  e2ee.rs  http.rs  keys.rs  lib.rs  main.rs  openai.rs  sessions.rs  tools.rs  util.rs  venice.rs
src/attestation/: mod.rs
src/config/: mod.rs
src/e2ee/: mod.rs
src/http/: mod.rs
src/keys/: mod.rs
src/openai/: chat.rs  mod.rs
src/sessions/: mod.rs
src/tools/: mod.rs
src/venice/: mod.rs
src/vllm_tool_parser/: error.rs  mod.rs  parameters.rs  utils.rs
src/vllm_tool_parser/glm_xml/: glm47_moe.rs  mod.rs
src/vllm_tool_parser/json/: hermes.rs  mod.rs  qwen.rs
tests/: baseline.rs  models.rs  proxy_integration.rs
