[package]
name = "venice-e2ee-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = { version = "0.8", features = ["zeroize"] }
aes-gcm = { version = "0.10", features = ["zeroize"] }
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["env", "toml"] }
ghash = { version = "0.5", features = ["zeroize"] }
hkdf = "0.12"
polyval = { version = "0.6", features = ["zeroize"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde_json = "1.0"
async-stream = "0.3"
futures-core = "0.3"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "time"] }
k256 = { version = "0.13", features = ["ecdh"] }
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = { version = "1.11", features = ["v4"] }
zeroize = "1.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
